<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    style="@style/BGMain" >

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/ic_launcher_foreground"
            android:cropToPadding="false"
            app:srcCompat="@drawable/per"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ic_launcher_foreground"
            app:srcCompat="@drawable/office"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/imageButton3"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ic_launcher_foreground"
            app:srcCompat="@drawable/pub"
            android:contentDescription="TODO" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/Title"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/but1"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Title"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/but2"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Title"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/but3"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                style="@style/BG1"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/Subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/memo1"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/Subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/desc1"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                style="@style/BG2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/Subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/memo2"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/Subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/desc2"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:orientation="vertical"
                style="@style/BG3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/spotify" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                style="@style/BG4"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/game"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/Subject"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/memo4"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/Subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/desc4"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>